--- a/Animated Page/Styles/style.css
+++ b/Animated Page/Styles/style.css
@@ -5,21 +5,28 @@
     box-sizing: border-box;
 }
 
+
 body {
     display: flex;
     flex-direction: column;
     font-size: 24px;
+    background-image: url("background.gif");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 /* Header Styles */
 header {
     height: 100px;
+    color: #fff;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 header > img {
-    height: 50px;
-    width: 80px;
+    height: 120px;
+    width: 150px;
     margin: 0px auto 0px 20px;
+    
 }
 
 ul {
@@ -32,8 +39,21 @@ li {
 }
 
 li:hover {
-    color: rgba(0, 0, 0, 0.8);
+    color: #FFA400;
 }
+
+
+div input{
+    width: 350px;
+    height: 40px;
+}
+div form{
+    padding-left: 10px; 
+	padding-right: 20px; 
+	padding-top: 30px; 
+	padding-bottom: 10px; 
+}
+
 
 /* Main Styles */
 main {
@@ -42,13 +62,13 @@ main {
 }
 
 section.box-up-col {
-    background-color: bisque;
+    background-color: #553ace;
     padding: 100px;
 }
 
 #queue {
     min-height: 200px;
-    background-color: aquamarine;
+    background-color: #e2e2f8;
 }
 
 .left {
@@ -67,16 +87,85 @@ section.box-up-col {
     height: 50px;
     min-width: 50px;
     max-width: 100px;
-    background-color: red;
-    border: dashed 1px yellow;
+    
+    color: #FFFFFF;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: black;
+    border: solid 1px black;
+    box-shadow: rgb(85, 58, 206, 0.4) -5px 5px, rgb(85, 58, 206, 0.377) -10px 10px, rgb(85, 58, 206, 0.2) -15px 15px, rgb(85, 58, 206, 0.1) -20px 20px, rgb(85, 58, 206, 0.05) -25px 25px;
 }
+
 
 fieldset {
     padding: 15px 20px;
+    height: 500px;
+    width: 500px;
+    background-color:#170055;
+    border-radius: 5px;
+    border: black;
+    
 }
+
+
+input {
+    font: inherit;
+    padding: 0.2em 0.5em;
+  }
 
 button {
     margin: 5px 0px;
+}
+
+
+/* CSS */
+.button {
+  align-items: center;
+  background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
+  border: 0;
+  border-radius: 8px;
+  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  display: flex;
+  font-family: Phantomsans, sans-serif;
+  font-size: 20px;
+  justify-content: center;
+  line-height: 1em;
+  max-width: 100%;
+  min-width: 140px;
+  padding: 3px;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  cursor: pointer;
+}
+
+.button:active,
+.button:hover {
+  outline: 0;
+}
+
+.button span {
+  background-color: rgb(5, 6, 45);
+  padding: 16px 24px;
+  border-radius: 6px;
+  width: 100%;
+  height: 100%;
+  transition: 300ms;
+}
+
+.button:hover span {
+  background: none;
+}
+
+@media (min-width: 768px) {
+  .button {
+    font-size: 24px;
+    min-width: 196px;
+  }
 }
 
 /* Other Styles */
@@ -87,17 +176,28 @@ button {
     align-items: center;
 }
 
+.box-up-col #content{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: larger;
+    color: #fff;
+    padding: 10px;
+}
+
 .box-up-row {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    padding: 20px;
 }
 
 /* Footer Styles */
 footer {
     height: 50px;
-    background-color: #000;
+    background-image: url("background.gif");
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-family: Arial, Helvetica, sans-serif;
     color: #fff;
-    font-size: 16px;
+    font-size: 15px;
 }
