--- a/Animated Page/Styles/style.css
+++ b/Animated Page/Styles/style.css
@@ -64,32 +64,53 @@ div form{
 /* Main Styles */
 main {
     min-height: calc(100vh - 150px);
-    background-color: #808080;
+    /*background-color: #808080;*/
 }
+
 
 h4 {
     margin-bottom: 10px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
 
 .algo-links {
     text-align: center;
     text-decoration: none;
     padding: 5px 10px;
     margin: 10px 10px;
-    background-color: #dadada;
-    color: #fff;
-    border-radius: 20px;
+    background-color: #ffffff;
+    color:black;
+    border-radius: 15px;
     width: 200px;
 }
 
+.algo-links:disabled {
+  pointer-events: none;
+}
+
+.algo-links:hover {
+  color: #fff;
+  background-color: #1A1A1A;
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+.algo-links:active {
+  box-shadow: none;
+  transform: translateY(0);
+}
+
+
 section.box-up-col {
-    background-color: #553ace;
+    background-color: #A2DBFA;
     padding: 100px;
 }
 
 #queue {
     min-height: 200px;
-    background-color: #e2e2f8;
+    background-color: rgb(214, 214, 214);
+
 }
 
 .left {
@@ -121,12 +142,13 @@ section.box-up-col {
 
 fieldset {
     padding: 15px 20px;
-    height: 500px;
-    width: 500px;
+    /* height: 250px; */
+    width: 900px;
     background-color:#170055;
-    border-radius: 5px;
+    border-radius: 0px;
     border: black;
-    
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 
@@ -134,6 +156,11 @@ input {
     font: inherit;
     padding: 0.2em 0.5em;
   }
+
+details{
+    background-color: rgb(214, 214, 214);
+}
+
 
 /* button {
     margin: 5px 0px;
@@ -163,6 +190,7 @@ input {
   touch-action: manipulation;
   white-space: nowrap;
   cursor: pointer;
+  margin: 20px;
 }
 
 .button:active,
@@ -199,9 +227,10 @@ input {
 }
 
 .box-up-col #content{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: larger;
-    color: #fff;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight:bolder;
+    font-size: xx-large;
+    color: #1A1A1A;
     padding: 10px;
 }
 
@@ -222,10 +251,12 @@ hr {
 /* Footer Styles */
 footer {
     height: 50px;
-    background-image: url("background.gif");
+    background-color: rgb(214, 214, 214);
+    background-color: #A2DBFA;
     background-repeat: no-repeat;
     background-size: cover;
     font-family: Arial, Helvetica, sans-serif;
-    color: #fff;
+    color: black;
     font-size: 15px;
 }
+
