--- a/Animated Page/Styles/style.css
+++ b/Animated Page/Styles/style.css
@@ -131,13 +131,17 @@ section.box-up-col {
     max-width: 100px;
     margin: 10px 5px;
     
-    color: #FFFFFF;
+    color: #000000;
     text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: black;
+    align-items: center;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: rgb(255, 255, 255);
     border: solid 1px black;
-    box-shadow: rgb(85, 58, 206, 0.4) -5px 5px, rgb(85, 58, 206, 0.377) -10px 10px, rgb(85, 58, 206, 0.2) -15px 15px, rgb(85, 58, 206, 0.1) -20px 20px, rgb(85, 58, 206, 0.05) -25px 25px;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    /* box-shadow: rgb(85, 58, 206, 0.4) -5px 5px, rgb(85, 58, 206, 0.377) -10px 10px, rgb(85, 58, 206, 0.2) -15px 15px, rgb(85, 58, 206, 0.1) -20px 20px, rgb(85, 58, 206, 0.05) -25px 25px; */
 }
+
+
 
 
 fieldset {
@@ -260,3 +264,24 @@ footer {
     font-size: 15px;
 }
 
+
+
+
+div .process{
+    height: 50px;
+    min-width: 50px;
+    max-width: 100px;
+    margin: 10px 5px;
+    position: relative;
+    animation-name: example;
+    animation-duration: 4s;
+    animation-iteration-count: 1s;
+  }
+  
+  @keyframes example {
+    0%   {
+         left:0px; top:0px;}
+         25%  {background-color:yellow; left:50px; top:0px;}
+  100% {background-color:rgb(255, 255, 255); left:0px; top:0px;}
+}
+  
