--- a/Animated Page/Styles/style.css
+++ b/Animated Page/Styles/style.css
@@ -107,22 +107,32 @@ section.box-up-col {
     padding: 100px;
 }
 
-#queue {
-    min-height: 200px;
+.queue {
+    display: grid;
+    grid-template-columns: repeat(3, 33%);
+    grid-template-rows: auto;
+    grid-template-areas: "left middle right";
+    min-height: 30px;
     background-color: rgb(214, 214, 214);
-
 }
 
 .left {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    width: 60%;
-    height: 100%;
+    grid-area: left;
+    border-right: solid 3px black;
+}
+
+.middle {
+    grid-area: middle;
     border-right: solid 3px black;
 }
 
 .right {
-    width: 70%;
+    grid-area: right;
+}
+
+.long {
+    min-height: 300px;
+    height: 100%;
 }
 
 .process {
@@ -147,18 +157,17 @@ div .process{
     max-width: 100px;
     margin: 10px 5px;
     position: relative;
-    animation-name: example;
-    animation-duration: 4s;
-    animation-iteration-count: 1s;
-  }
-  
-  @keyframes example {
-    0%   {
-         left:0px; top:0px;}
-         25%  {background-color:yellow; left:50px; top:0px;}
-  100% {background-color:rgb(255, 255, 255); left:0px; top:0px;}
 }
-  
+
+.red {
+    background-color: red;
+}
+.green {
+    background-color: green;
+}
+.blue {
+    background-color: blue;
+}
 
 
 
@@ -184,6 +193,12 @@ details{
     background-color: rgb(214, 214, 214);
 }
 
+.execution-box {
+    height: 300px;
+    width: 300px;
+    background-color: rgb(250, 250, 65);
+}
+
 
 /* button {
     margin: 5px 0px;
@@ -192,6 +207,7 @@ details{
 
 /* CSS */
 .button {
+    display: flex;
   align-items: center;
   background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
   border: 0;
@@ -203,9 +219,12 @@ details{
   font-family: Phantomsans, sans-serif;
   font-size: 20px;
   justify-content: center;
+  text-align: center;
   line-height: 1em;
-  max-width: 100%;
+  
   min-width: 140px;
+  width: 200px;
+  height: 80px;
   padding: 3px;
   text-decoration: none;
   user-select: none;
@@ -223,10 +242,14 @@ details{
 
 .button span {
   background-color: rgb(5, 6, 45);
-  padding: 16px 24px;
+  padding: 4px 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 6px;
   width: 100%;
   height: 100%;
+  white-space: normal;
   transition: 300ms;
 }
 
@@ -242,6 +265,13 @@ details{
 }
 
 /* Other Styles */
+.pad-right{
+    padding-right: 20px;
+}
+.pad-left{
+    padding-left: 20px;
+}
+
 .box-up-col {
     display: flex;
     flex-direction: column;
@@ -278,6 +308,68 @@ summary{
 p{
     font-size: large;
 }
+
+/* From W3 Schools*/
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #2196F3;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+/**/
 
 /* Footer Styles */
 footer {
