--- a/Animated Page/Styles/style.css
+++ b/Animated Page/Styles/style.css
@@ -10,7 +10,7 @@ body {
     display: flex;
     flex-direction: column;
     font-size: 24px;
-    background-image: url("background.gif");
+    background-image: url("../Images/background.gif");
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -101,10 +101,13 @@ h4 {
   transform: translateY(0);
 }
 
+.top {
+    padding: 50px;
+}
 
-section.box-up-col {
+section {
     background-color: #A2DBFA;
-    padding: 100px;
+    margin-bottom: 20px;
 }
 
 .queue {
@@ -169,20 +172,36 @@ div .process{
     background-color: blue;
 }
 
+form {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+    padding: 40px 0px;
+    margin-top: 20px;
+    background-color: #170055;
+    border: solid 1px #fff;
+    border-radius: 10px;
+}
 
-
+.fifty {
+    width: 50%;
+}
 
 fieldset {
+    width: 80%;
     padding: 15px 20px;
-    /* height: 250px; */
-    width: 900px;
-    background-color:#170055;
-    border-radius: 0px;
-    border: black;
+    border-radius: 10px;
+    border: solid 1px transparent;
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+input {
+    margin: 10px 0px;
+    border-radius: 10px;
+}
 
 input {
     font: inherit;
@@ -198,11 +217,6 @@ details{
     width: 300px;
     background-color: rgb(250, 250, 65);
 }
-
-
-/* button {
-    margin: 5px 0px;
-} */
 
 
 /* CSS */
@@ -264,6 +278,10 @@ details{
   }
 }
 
+#input {
+    margin: 5px 0px;
+}
+
 /* Other Styles */
 .pad-right{
     padding-right: 20px;
@@ -307,6 +325,10 @@ summary{
 
 p{
     font-size: large;
+}
+
+.left-border {
+    border-left: solid 3px #00DDEB;
 }
 
 /* From W3 Schools*/
@@ -374,12 +396,9 @@ input:checked + .slider:before {
 /* Footer Styles */
 footer {
     height: 50px;
-    background-color: rgb(214, 214, 214);
-    background-color: #A2DBFA;
-    background-repeat: no-repeat;
-    background-size: cover;
     font-family: Arial, Helvetica, sans-serif;
-    color: black;
+    background-color: #000;
+    color: #fff;
     font-size: 15px;
 }
 
